// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UniRefColumnConfiguration component should render column "common_taxon": common_taxon 1`] = `<DocumentFragment />`;

exports[`UniRefColumnConfiguration component should render column "common_taxonid": common_taxonid 1`] = `<DocumentFragment />`;

exports[`UniRefColumnConfiguration component should render column "count": count 1`] = `
<DocumentFragment>
  9 members
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render column "created": created 1`] = `
<DocumentFragment>
  <time
    datetime="2013-06-26T00:00:00.000Z"
  >
    2013-06-26
  </time>
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render column "id": id 1`] = `
<DocumentFragment>
  <a
    href="/uniref/UniRef90_Q28I25"
  >
    UniRef90_Q28I25
  </a>
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render column "identity": identity 1`] = `
<DocumentFragment>
  UniRef90
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render column "length": length 1`] = `<DocumentFragment />`;

exports[`UniRefColumnConfiguration component should render column "members": members 1`] = `
<DocumentFragment>
  <ul
    class="no-bullet"
  >
    <li>
      <a
        href="/uniprotkb/Q28I25"
      >
        Q28I25
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb/A0A6I8RXP7"
      >
        A0A6I8RXP7
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb/A0A6I8SV39"
      >
        A0A6I8SV39
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb/A0A6I8QDI3"
      >
        A0A6I8QDI3
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb/A0A6I8QHP6"
      >
        A0A6I8QHP6
      </a>
    </li>
    <a
      class="button tertiary"
      href="/uniref/UniRef90_Q28I25"
    >
      4 more members
    </a>
  </ul>
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render column "name": name 1`] = `
<DocumentFragment>
  Cluster: CDC7 cell division cycle 7
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render column "organism": organism 1`] = `
<DocumentFragment>
  <ul
    class="no-bullet"
  >
    <li />
  </ul>
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render column "organism_id": organism_id 1`] = `
<DocumentFragment>
  <ul
    class="no-bullet"
  >
    <li />
  </ul>
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render column "sequence": sequence 1`] = `<DocumentFragment />`;

exports[`UniRefColumnConfiguration component should render column "types": types 1`] = `
<DocumentFragment>
  <span
    class="entry-title__status icon--uniparc"
    title="This marks a UniParc entry"
  >
    <test-file-stub />
  </span>
  <span
    class="entry-title__status icon--unreviewed"
    title="This marks an unreviewed UniProtKB entry"
  >
    <test-file-stub />
  </span>
</DocumentFragment>
`;
